# bakery-experiment

./: .gitignore  Cargo.toml  README.md  TODO.md  bakery_level.json  conversation-6a30ee060bee34f74b3c1b47.json  index.html  sw.js  wasm-build.sh
.github/workflows/: deploy.yml
src/: agent.rs  audio.rs  components.rs  editor.rs  interaction.rs  io.rs  level.rs  main.rs  mobile.rs  movement.rs  npc.rs  player.rs  resources.rs  station_config.rs  stations.rs  ui.rs
src/audio/: mod.rs  native_backend.rs  wasm_backend.rs
src/npc/: conveyor_loader.rs  mod.rs  movement.rs  oven_hauler.rs  packer_hauler.rs
web/: bakery-experiment.d.ts  bakery-experiment.js  bakery-experiment_bg.wasm.d.ts  index.html
